--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,5 +28,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'D501'
 - !lcsh 'World War, 1914-1918 -- Religious aspects'
+- GITenberg
 title: Thoughts on religion at the front
 url: http://www.gutenberg.org/ebooks/19413
